Alternative way to fix the collapsed vertical margin
.main-header {
background: #3acec2;
padding: 1em 0;
}

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
 }
 .main-header {
 	background: #3acec2;
+	padding: 1em 0;
 }
 
 .main-footer {
